# polymarket-btc-arb

./: Cargo.toml  FIX_SUMMARY.md  GITHUB_SETUP.md  LICENSE  PHASE_ANALYSIS.md  PHASE_STATUS_TABLE.md  PROJECT_STATUS.md  README.md  TODO_ESTIMATES.md  WALLET_SETUP.md  config.example.toml  monitor.sh
src/: arbitrage.rs  config.rs  config_impl.rs  main.rs  matcher.rs  monitor.rs  positions.rs  trader.rs  trader_real.rs
src/api/: btc.rs  btc_real.rs  mod.rs  ordinals.rs  polymarket.rs  polymarket_api.rs  polymarket_response.rs  predyx.rs
src/models/: btc_market.rs  mod.rs  polymarket.rs
